parslers-benchmark/src/tests/invalid/semanticErr/while/whileIntCondition.wacc
# while condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  while 15 + 6 do
    skip
  done
end
